Added services section

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal </title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <div id="header">
@@ -42,11 +43,11 @@
 
                         <div class="tab-title">
                             <p class="tab-links active-links " onclick="opentab('skills')">Skills</p>
-                            <p class="tab-links" onclick="opentab('exp')">Experience</p>
-                            <p class="tab-links" onclick="opentab('edu')">Education</p>
+                            <p class="tab-links " onclick="opentab('exp')">Experience</p>
+                            <p class="tab-links " onclick="opentab('edu')">Education</p>
                         </div>
 
-                        <div class="tab-contains active-tab" id="skills">
+                        <div class="tab-contains active-tab " id="skills">
                             <ul>
                             <li><span>UI/UX</span><br> Designing web/app and interfaces</li>
                             <li><span>Web development</span><br> Designing web/app and interfaces</li>
@@ -72,6 +73,32 @@
         </div>
     </div>
 
+    <!-- servieseee -->
+    <div id="services">
+        <div class="container">
+            <h1 class="sub-title">My Services</h1>
+            <div class="services-list">
+                <div>
+                    <i class="fa-solid fa-code"></i>
+                    <h2>Web designing</h2>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa vero omnis, accusantium sequi repudiandae numquam doloremque atque quia nulla? A!</p>
+                    <a href="">Learn more</a>
+                </div>
+                <div>
+                    <i class="fa-solid fa-code"></i>
+                    <h2>app designing</h2>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa vero omnis, accusantium sequi repudiandae numquam doloremque atque quia nulla? A!</p>
+                    <a href="">Learn more</a>
+                </div>
+                <div>
+                    <i class="fa-solid fa-code"></i>
+                    <h2>site designing</h2>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa vero omnis, accusantium sequi repudiandae numquam doloremque atque quia nulla? A!</p>
+                    <a href="">Learn more</a>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
     <script>
@@ -88,7 +115,9 @@
             tabcontain.classList.remove("active-tab");
            }
         }
-
+    
+          event.currentTarget.classList.add("active-links");
+          document.getElementById(tabname).classList.add("active-tab");
 
     </script>
 
