added portfolio section

--- a/index.html
+++ b/index.html
@@ -101,6 +101,39 @@
     </div>
 
 
+    <!-- --------------portfolio sectron ----------d -->
+    <div id="portfolio">
+        <div class="container">
+            <h1 class="sub-title">My Work</h1>
+            <div class="work-list">
+                <div class="work">
+                    <img src="images/work-1.png" alt="">
+                    <div class="layer">
+                        <h3>Social media player</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere qui pariatur excepturi maiores, unde suscipit, nulla</p>
+                        <a href="#"><i class="fa-sharp fa-solid fa-up-right-from-square"></i></a>
+                    </div>
+                </div>
+                <div class="work">
+                    <img src="images/work-2.png" alt="">
+                    <div class="layer">
+                        <h3>Social media player</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere qui pariatur excepturi maiores, unde suscipit, nulla</p>
+                        <a href="#"><i class="fa-sharp fa-solid fa-up-right-from-square"></i></a>
+                    </div>
+                </div>
+                <div class="work">
+                    <img src="images/work-3.png" alt="">
+                    <div class="layer">
+                        <h3>Social media player</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere qui pariatur excepturi maiores, unde suscipit, nulla</p>
+                        <a href="#"><i class="fa-sharp fa-solid fa-up-right-from-square"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script>
 
         var tablinks = document.getElementsByClassName("tab-links");
