--- a/index.html
+++ b/index.html
@@ -131,8 +131,42 @@
                     </div>
                 </div>
             </div>
+            <a href="#" class="btn">See more</a>
         </div>
     </div>
+
+        <!-- <-----------contact----------------> 
+
+        <div id="contact">
+            <div class="container">
+                <div class="row">
+                    <div class="contact-left">
+                        <h1 class="sub-title">Contact me</h1>
+                        <p> <i class="fa-solid fa-envelope"></i> harsh@gmail.com</p>
+                        <p> <i class="fa-solid fa-phone"></i> 0987654321</p>
+                        <div class="social-links">
+                            <a href=""><i class="fa-brands fa-facebook"></i></a>
+                            <a href=""><i class="fa-brands fa-twitter"></i></a>
+                            <a href=""><i class="fa-brands fa-linkedin"></i></a>
+
+                        </div>
+                        <a href="images/my-cv.pdf" download class=" btn btn2 ">Download CV</a>
+
+                    </div>
+                    <div class="contact-right">
+                        <form>
+                            <input type="text" name="Name" placeholder="Your name" required>
+                            <input type="email" name="Email" placeholder="Your Email" required>
+                            <textarea name="" rows="6" placeholder="Your message" required></textarea>
+                            <button type="submit" class="btn bt ">Submit</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
 
     <script>
 
